--- a/stylus/lost.styl
+++ b/stylus/lost.styl
@@ -1,4 +1,4 @@
-// Lost Grid v2.0.2 - https://github.com/corysimmons/lost
+// Lost Grid v2.0.3 - https://github.com/corysimmons/lost
 
 $gutter = 30px
 $rtl = false
@@ -58,13 +58,13 @@ align($dir = both)
   > *
     position: absolute
     transform-style: preserve-3d
-    if ($direction == horizontal) or ($direction == h)
+    if ($dir == horizontal) or ($dir == h)
       left: 50%
       transform: translateX(-50%)
-    else if ($direction == vertical) or ($direction == v)
+    else if ($dir == vertical) or ($dir == v)
       top: 50%
       transform: translateY(-50%)
-    else if ($direction == reset)
+    else if ($dir == reset)
       top: auto
       left: auto
       transform: translate(0, 0)
